<resources>
    <string name="app_name" translatable="false">Horário Ônibus</string>
    <string name="title_activity_horario_onibus">Horário Ônibus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nomeCompleto">Nome Sobrenome</string>
    <string name="action_configuracoes">Configurações</string>
    <string name="txt_horario">Horários</string>
    <string name="txt_favoritos">Linhas Favoritas</string>
    <string name="txt_temas">Temas</string>
    <string name="txt_configuracoes">Configurações</string>
    <string name="txt_compartilhar">Compartilhar</string>
    <string name="txt_sobre">Sobre</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_compartilhar_app">Compartilhar APP</string>
    <string name="title_activity_favoritos">Favoritos</string>
    <string name="txt_pesquisar">Pesquisar</string>
    <string name="main">mainFrag</string>
    <string name="pesquisar_hint">Pesquisar...</string>
    <string name="add_Favoritos">Adicionar_Favoritos</string>
    <string name="txt_Linhas_Horarios">Nome da linha do Ônibus</string>
    <string name="txtNomeLinhas">087 - Guaicurus / Gen.Osório</string>
    <string name="txtTipoLinha">Tipo da Linha</string>
    <string name="txt_etinerario">Etinerários</string>
    <string name="txt_tarifas">Tarifas</string>
    <string name="txt_aviso">Aviso!</string>
</resources>
