<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/ic_favoritos"
            android:title="@string/txt_favoritos" />
        <item
            android:id="@+id/nav_atendimento_especial"
            android:icon="@drawable/ic_especial"
            android:title="Atendimento Especial" />
        <item
            android:id="@+id/nav_tarifas"
            android:icon="@drawable/ic_cartao_tarifas"
            android:title="@string/txt_tarifas" />
        <item
            android:id="@+id/nav_aviso"
            android:icon="@drawable/ic_aviso"
            android:title="@string/txt_aviso" />
        <item
            android:id="@+id/nav_configuracoes"
            android:icon="@drawable/ic_configuracoes"
            android:title="@string/txt_configuracoes" />
    </group>

    <item android:title="Comunicar">
        <menu>
            <item
                android:id="@+id/nav_compartilhar_app"
                android:icon="@drawable/ic_compartilhar"
                android:title="@string/txt_compartilhar_app" />
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_sobre"
                android:title="@string/txt_sobre" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/txt_feedback" />
        </menu>
    </item>

</menu>
