<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_pesquisar"
        android:orderInCategory="100"
        android:title="@string/txt_pesquisar"
        android:icon="@drawable/ic_pesquisar"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favoritos"
        android:orderInCategory="100"
        android:title="@string/txt_favoritos"
        android:icon="@drawable/ic_favoritos"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_configuracoes"
        android:orderInCategory="100"
        android:title="@string/txt_configuracoes"
        android:icon="@drawable/ic_configuracoes"
        app:showAsAction="never" />


</menu>
